--- a/package.json
+++ b/package.json
@@ -4,17 +4,18 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1",
+        "test": "node tests/nasa-feed.test.js",
         "build": "parcel build src/index.html"
     },
     "keywords": [],
     "author": "",
     "license": "ISC",
     "devDependencies": {
+        "axios": "^1.2.0",
         "babel-eslint": "^10.1.0",
         "eslint": "^8.29.0",
         "eslint-plugin-react": "^7.31.11",
-        "parcel-bundler": "^1.12.5",
+        "parcel-bundler": "^1.3.1",
         "postcss": "^8.4.19",
         "postcss-preset-env": "^6.7.0",
         "prettier": "^2.8.0"
